--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ table.impar tr:nth-last-child(even) {
 } 
 #ulcustomi ul ul{
     list-style-type: disc;
-    list-style-image: url(/img/emoji_listas.jpg);
+    list-style-image: url(../img/emoji_listas.jpg);
 }
 
 #ulcustomi ul ul ul{
